added center align for all

--- a/Style.css
+++ b/Style.css
@@ -1,6 +1,7 @@
 body{
   font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
   color: rgb(0, 81, 128);
+  text-align: center;
 }
 
 h1, h2{
